Updated text domain and prefix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* 
-Theme Name: watu
+Theme Name: elipress
 Theme URI: https://www.linkedin.com/in/elikemdaniels
 Author: Elikem Jason Daniels
 Author URI: https://www.linkedin.com/in/elikemdaniels
@@ -7,5 +7,5 @@ Description: A minimal WordPress starter theme
 Version: 1.0
 License: MIT License
 License URI: https://opensource.org/licenses/MIT
-Text Domain: watu
+Text Domain: elipress
 */
